// アカウント作成リクエスト
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/account";

message AccountCreateRequest {
  string user_id = 1;
  string name = 2;
}
