// アカウントログインリクエスト
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/account";

message AccountLoginRequest {
  string user_id = 1;
  string name = 2;
  string password = 3;
}
