// アカウントログインレスポンス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/account";

import "user_account_structure.proto";

message AccountLoginResponse {
  optional UserAccount user_account = 1;
}
